--- a/res/layout/activity_wojia_main.xml
+++ b/res/layout/activity_wojia_main.xml
@@ -85,7 +85,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
             android:contentDescription="@string/action_settings"
-            android:src="@drawable/wojia_main_friendsquan" />
+            android:src="@drawable/water_right" />
 
         <TextView
             android:id="@+id/tv_wojia_main_frendquan"
@@ -94,7 +94,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/iv_friends"
-            android:text="@string/wojia_main_friendquan"
+            android:text="@string/i_water_right"
             android:textColor="#353535"
             android:textSize="16sp" />
 
